<resources>
    <string name="app_name">PicoZen</string>
    <string name="list_apps">Apps</string>
    <string name="list_tweaks">Tweaks</string>
    <string name="list_sideload">Sideload</string>
    <string name="list_saves">Saves</string>
    <string name="list_about">About</string>
    <string name="settings">Settings</string>
    <string name="currently_in_development">Currently in development</string>
    <string name="start_shortcut">Open PicoZen with Library icon from the system dashboard</string>
    <string name="shortcut_prompt">Open PicoZen with the Library shortcut (Experimental)</string>
    <string name="configure">Configure</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_icon_cache">Refresh icon cache</string>
    <string name="changelog_empty">The changelog could not be fetched. You are likely not connected to the internet or are using a pre-release build.</string>
    <string name="changelog_header">What\'s new:</string>
    <string name="made_with_love">Made by Barnaby</string>
    <string name="gh_repo" translatable="false">barnabwhy/PicoZen</string>
    <string name="latest_version">Latest version installed (v%1$s)</string>
    <string name="new_version_available">New version available (v%1$s)</string>
    <string name="version_text" translatable="false">v%1$s</string>
    <string name="empty_group">Empty group</string>
    <string name="edit_mode">Edit mode</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="update_available">Update available</string>
    <string name="check">Check</string>
    <string name="change">Change</string>
    <string name="sideload_server">Sideload server</string>
    <string name="start_on_boot">Start PicoZen on device boot</string>
    <string name="download">Download</string>
    <string name="dismiss">Dismiss</string>
    <string name="an_error_occurred">An error occurred (%1$s)</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="extracting_zip">Extracting ZIP</string>
    <string name="extracting_zip_progress">Extracting ZIP (%1$s)</string>
    <string name="extracting_archive">Extracting archive</string>
    <string name="extracting_archive_progress">Extracting archive (%1$s)</string>
    <string name="download_complete">Download complete</string>
    <string name="fetch_files_error">Couldn\'t fetch files</string>
    <string name="no_files">No files found</string>
    <string name="no_sideload_server">A sideload server has not been set in settings</string>
    <string name="sideload_connecting">Connecting...</string>
    <string name="sideload_fetching">Fetching...</string>
    <string name="install">Install</string>
    <string name="cancel">Cancel</string>
    <string name="saves_empty">No supported apps found</string>
    <string name="saves_android_files_bad">Saves manager is currently unsupported on Android 11 and newer</string>
    <string name="name">Name</string>
    <string name="save_manager">Save Manager</string>
    <string name="files_size">Files: %1$s</string>
    <string name="backup_none">Backup: None</string>
    <string name="backup_size">Backup: %1$s</string>
    <string name="backup">Backup</string>
    <string name="backing_up">Backing up...</string>
    <string name="restore">Restore</string>
    <string name="restoring">Restoring...</string>
    <string name="backup_success">Backup (Done)</string>
    <string name="restore_success">Restore (Done)</string>
    <string name="backup_fail">Backup (Failed)</string>
    <string name="restore_fail">Restore (Failed)</string>
    <string name="delete_backup">Delete backup</string>
    <string name="backup_warning">WARNING: Restoring from a corrupt backup can cause data loss</string>
    <string name="unknown_date">Unknown date</string>
    <string name="general">General</string>
    <string name="server_type">Server type:</string>
    <string name="region">Region:</string>

    <string name="detail_category">Category:</string>
    <string name="detail_control">Control:</string>
    <string name="detail_developer">Developer:</string>
    <string name="detail_genres">Genres:</string>
    <string name="detail_languages">Languages:</string>
    <string name="detail_permissions">Permissions:</string>
    <string name="detail_play_modes">Play modes:</string>
    <string name="detail_private_policy">Private policy:</string>
    <string name="detail_publisher">Publisher:</string>
    <string name="detail_release_note">Release note:</string>
    <string name="detail_size">Size:</string>
    <string name="detail_supported_platforms">Supported platforms:</string>
    <string name="detail_supported_player_mode">Supported player mode:</string>
    <string name="detail_term_of_service">Term of service:</string>
    <string name="detail_update_time">Permissions:</string>
    <string name="detail_version">Version:</string>
    <string name="detail_web_site">Web site:</string>

    <string name="address_format_template">(Format: %1$s)</string>
    <string name="quit_picozen">Quit PicoZen</string>
    <string name="quit">Quit</string>
    <string-array name="address_format">
        <item />  <!-- EmptyProvider -->
        <item>username:password@host</item>  <!-- ProxyProvider -->
        <item>username:password@host</item>  <!-- FTPProvider -->
        <item>username:password@host/share</item>  <!-- SMBProvider -->
    </string-array>

    <string-array name="sort_options">
        <item>↓\t Name</item>
        <item>↑\t Name</item>
        <item>↓\t Recent</item>
        <item>↑\t Recent</item>
        <item>↓\t Install date</item>
        <item>↑\t Install date</item>
    </string-array>

    <string-array name="group_options">
        <item>☰\t All</item>
        <item>★\t Favorites</item>
        <item>—\t Hidden</item>
    </string-array>

    <string-array name="sideload_type_options">
        <item>None</item>
        <item>Proxied FTP</item>
        <item>FTP (Slow)</item>
        <item>SMB</item>
    </string-array>

    <string-array name="region_options">
        <item>Global</item>
        <item>China</item>
    </string-array>
</resources>
