<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:showDividers="middle"
                android:divider="@drawable/divider">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:paddingHorizontal="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scrollbars="none"
                    android:overScrollMode="never">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:showDividers="middle"
                            android:divider="@drawable/divider">
                                <LinearLayout
                                    android:id="@+id/configure_accessibility"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:background="@drawable/bg_list_item_s"
                                    android:padding="15dp">
                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_weight="1"
                                            android:layout_height="match_parent"
                                            android:text="@string/shortcut_prompt" />
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:textStyle="bold"
                                            android:gravity="center_vertical"
                                            android:textColor="@color/link"
                                            android:text="@string/configure" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/refresh_icon_cache"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:background="@drawable/bg_list_item_s"
                                    android:padding="15dp">
                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_weight="1"
                                            android:layout_height="match_parent"
                                            android:text="@string/refresh_icon_cache" />
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:textStyle="bold"
                                            android:gravity="center_vertical"
                                            android:textColor="@color/link"
                                            android:text="@string/refresh" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/toggle_edit_mode"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:background="@drawable/bg_list_item_s"
                                    android:padding="15dp">
                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_weight="1"
                                            android:layout_height="match_parent"
                                            android:text="@string/edit_mode" />
                                        <TextView
                                            android:id="@+id/toggle_edit_mode_btn"
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:textStyle="bold"
                                            android:gravity="center_vertical"
                                            android:textColor="@color/link"
                                            android:text="@string/enable" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/check_for_updates_btn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:background="@drawable/bg_list_item_s"
                                    android:padding="15dp">
                                        <TextView
                                            android:layout_width="0dp"
                                            android:layout_weight="1"
                                            android:layout_height="match_parent"
                                            android:text="@string/check_for_updates" />
                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:textStyle="bold"
                                            android:gravity="center_vertical"
                                            android:textColor="@color/link"
                                            android:text="@string/check" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="10dp"
                                    android:background="@drawable/bg_list_item_s">
                                        <EditText
                                            android:id="@+id/ftp_host_input"
                                            android:layout_width="0dp"
                                            android:layout_weight="1"
                                            android:layout_height="wrap_content"
                                            android:gravity="center_vertical"
                                            android:hint="@string/sideload_ftp_server"
                                            android:singleLine="true"
                                            android:textSize="14sp"
                                            android:textCursorDrawable="@null"
                                            android:padding="10dp"
                                            android:layout_marginEnd="15dp"
                                            android:background="@drawable/bg_list_item_hover_s" />
                                        <TextView
                                            android:id="@+id/ftp_host_btn"
                                            android:layout_width="wrap_content"
                                            android:layout_height="match_parent"
                                            android:textStyle="bold"
                                            android:gravity="center_vertical"
                                            android:textColor="@color/link"
                                            android:text="@string/change"
                                            android:padding="5dp" />
                                </LinearLayout>

                        </LinearLayout>
                </ScrollView>
                <TextView
                    android:id="@+id/version_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_text"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginVertical="25dp"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="right" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <View android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" />
                <View
                    android:id="@+id/close_btn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/bg_ico_btn"
                    android:scaleType="fitCenter"
                    android:foreground="@drawable/ic_close" />
        </LinearLayout>
</RelativeLayout>
