<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_item_s"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/backup_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/backup_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0B"
            android:textSize="16sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/restore_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore"
            android:textColor="@color/link"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp" />
        <TextView
            android:id="@+id/delete_backup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_backup"
            android:textColor="@color/alert"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp" />
    </LinearLayout>
</LinearLayout>